--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.blue-cont {
+  background-color: aqua;
+  display: flex;
+  height:70%;
+  justify-content: space-around;
+  margin-top: 30px;
+}
